--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaReformaLaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaReformaLaboral.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:lnk="http://java.sun.com/jsf/composite/linkare">
     <h:head>
     </h:head>
     <h:body>
@@ -22,7 +23,7 @@
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlVigenciasReformasLaborales.guardarCambiosVRL()}" process="@this" />
                                 <p:tooltip style="font-size: 12px" for="guardarRapido" value="#{msg['guardar']}" />
-                                
+
                                 <p:commandButton id="editar" value="" style="background-image: url(Imagenes/editar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlVigenciasReformasLaborales.editarCelda()}" process="@this"/>
                                 <p:tooltip style="font-size: 12px" for="editar" value="#{msg['editar']}" />
 
@@ -74,7 +75,7 @@
 
                                 <p:ajax event="filter" listener="#{controlVigenciasReformasLaborales.eventoFiltrar()}"/>
 
-                                <p:column style="font-size: 11px" headerText="#{msg['fecha']}" sortBy="#{info.fechavigencia}" filterBy="#{info.fechavigencia}" filterMatchMode="contains"  width="72" id="vrlFecha" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column style="font-size: 11px" headerText="#{msg['fecha']}" sortBy="#{info.fechavigencia}" filterBy="#{info.fechavigencia}" filterMatchMode="contains"  width="0.001" id="vrlFecha" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{info.fechavigencia}" >
@@ -82,13 +83,11 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:calendar  style="font-size: 10px;" value="#{info.fechavigencia}" id="editFecha"   styleClass="ui-datepicker, myClass"  
-                                                         navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
-                                                <p:ajax event="dateSelect" listener="#{controlVigenciasReformasLaborales.modificarVRL(indice)}" update="editFecha"/>
-                                                <p:ajax event="change" listener="#{controlVigenciasReformasLaborales.modificarVRL(indice)}" />
-                                                <p:ajax event="select" listener="#{controlVigenciasReformasLaborales.cambiarIndice(indice,0)}" /> 
-                                                <f:convertDateTime pattern="dd/MM/yyyy" />
-                                            </p:calendar>
+                                            <lnk:calendar id="editFecha" value="#{info.fechavigencia}" > 
+                                                <p:ajax event="dateSelect" listener="#{controlVigenciasReformasLaborales.modificarFechas(indice,0)}" update="editFecha" process="@this"/>
+                                                <p:ajax event="change" listener="#{controlVigenciasReformasLaborales.modificarFechas(indice,0)}" update="editFecha" process="@this"/>
+                                                <p:ajax event="select" listener="#{controlVigenciasReformasLaborales.cambiarIndice(indice,0)}" process="@this"/> 
+                                            </lnk:calendar>
                                         </f:facet>   
                                     </p:cellEditor>
 
@@ -161,7 +160,7 @@
                         <p:commandButton value="#{msg['no']}" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 255px" process="@this" />
                         <p:commandButton value="#{msg['cancelar']}" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                     </p:dialog>
-                     <p:dialog id="confirmarRastro" header="#{msg['atencion']}" widgetVar="confirmarRastro"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
+                    <p:dialog id="confirmarRastro" header="#{msg['atencion']}" widgetVar="confirmarRastro"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
                         <h:graphicImage value="Imagenes/informacion.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['confirmarRastro']}" style="position: absolute; left: 70px; top: 15px; width: 250px; font-weight:bold; text-align: center" />
                         <p:commandButton value="#{msg['si']}" onclick="confirmarRastro.hide();" actionListener="#{controlRastro.recibirDatosTabla(controlVigenciasReformasLaborales.backUpSecRegistro, 'VigenciasReformasLaborales', 'reformaLaboral')}" style="position: absolute; top: 63px; left: 230px" action="rastro" process="@this" />
@@ -206,6 +205,19 @@
                         <h:graphicImage value="Imagenes/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['errorObjetosDB']}" style="position: absolute; left: 70px; top: 28px; width: 185px; font-weight:bold;" />
                     </p:dialog>
+
+
+                    <p:dialog id="errorRegNew" header="#{msg['atencion']}" widgetVar="errorRegNew"  resizable="false" draggable="false" modal="true" height="60" width="275px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
+                        <h:outputText value="#{msg['errorRegNew']}" style="position: absolute; left: 70px; top: 15px; width: 185px; font-weight:bold;text-align: center" />
+                    </p:dialog>
+
+                    <p:dialog id="errorFechas" header="#{msg['atencion']}" widgetVar="errorFechas"  resizable="false" draggable="false" modal="true" height="60" width="275px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
+                        <h:outputText value="#{msg['errorFechas']}" style="position: absolute; left: 70px; top: 15px; width: 185px; font-weight:bold;" />
+                    </p:dialog>
+
+
                     <p:hotkey bind="ctrl+f11" actionListener="#{controlVigenciasReformasLaborales.activarCtrlF11()}"/> 
                 </h:form>
                 <h:form id="formularioDialogos" >
@@ -214,12 +226,14 @@
                         <center><strong><h:outputText value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="nuevaVRL" style="border: none;">
+
                             <strong><h:outputText value="#{msg['fechaN']}" style="font-size: 14px; position: absolute; top: 85px; left: 50px;" /></strong>
-                            <p:calendar  id="nuevaFecha" style="font-size: 10px; position: absolute; top: 80px; left: 200px;" value="#{controlVigenciasReformasLaborales.nuevaVigencia.fechavigencia}"  styleClass="ui-datepicker, myClass2"  
-                                         navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy">
-                                <p:ajax event="dateSelect" update="nuevaFecha"/>
-                                <p:ajax event="change" update="nuevaFecha"/>
-                            </p:calendar>
+                            <div id="posicionFormulaFechaVigNuevoReg" style="font-size: 10px; position: absolute; top: 80px; left: 200px">
+                                <lnk:calendar id="nuevaFecha" value="#{controlVigenciasReformasLaborales.nuevaVigencia.fechavigencia}" >
+                                    <p:ajax event="dateSelect" update="nuevaFecha" process="@this"/>
+                                    <p:ajax event="change" update="nuevaFecha" process="@this"/>
+                                </lnk:calendar>
+                            </div>
 
                             <strong><h:outputText value="#{msg['reformalaboralN']}" style="font-size: 14px; position: absolute; top: 118px; left: 50px" /></strong>
                             <p:inputText id="nuevaReformaLaboral" value="#{controlVigenciasReformasLaborales.nuevaVigencia.reformalaboral.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 115px;">
@@ -231,7 +245,7 @@
                             <p:watermark for="nuevaReformaLaboral" value="#{msg['reeformalaboralN']}" />
 
                             <p:commandButton id="limpiar" value="#{msg['limpiar']}" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;" actionListener="#{controlVigenciasReformasLaborales.limpiarNuevaVRL()}" update="nuevaVRL" process="@this"/>
-                            <p:commandButton id="agregarVRL" value="#{msg['agregar']}" style="font-size: 11px; position: absolute; left: 190px; top: 220px;"  process="@this" actionListener="#{controlVigenciasReformasLaborales.agregarNuevaVRL()}" onclick="NuevoRegistroVRL.hide();"  />
+                            <p:commandButton id="agregarVRL" value="#{msg['agregar']}" style="font-size: 11px; position: absolute; left: 190px; top: 220px;"  process="@this" actionListener="#{controlVigenciasReformasLaborales.agregarNuevaVRL()}"   />
                             <p:commandButton id="cancelarVRL" value="#{msg['cancelar']}" style="font-size: 11px; position: absolute; left: 280px; top: 220px;" actionListener="#{controlVigenciasReformasLaborales.limpiarNuevaVRL()}" update="nuevaVRL" onclick="NuevoRegistroVRL.hide();"  process="@this"/>
                         </p:panel>
                     </p:dialog>
@@ -241,12 +255,15 @@
                         <center><strong><h:outputText value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarVRL" style="border: none;">
+
                             <strong><h:outputText value="#{msg['fechaN']}" style="font-size: 14px; position: absolute; top: 85px; left: 50px;" /></strong>
-                            <p:calendar  id="duplicarFecha" style="font-size: 10px; position: absolute; top: 80px; left: 200px;" value="#{controlVigenciasReformasLaborales.duplicarVRL.fechavigencia}"  styleClass="ui-datepicker, myClass2"  
-                                         navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy">
-                                <p:ajax event="dateSelect" update="duplicarFecha"/>
-                                <p:ajax event="change" update="duplicarFecha"/>
-                            </p:calendar>
+                            <div id="posicionFormulaFechaVigDupliReg" style="font-size: 10px; position: absolute; top: 80px; left: 200px">
+                                <lnk:calendar id="duplicarFecha" value="#{controlVigenciasReformasLaborales.duplicarVRL.fechavigencia}" >
+                                    <p:ajax event="dateSelect" update="duplicarFecha" process="@this"/>
+                                    <p:ajax event="change" update="duplicarFecha" process="@this"/>
+                                </lnk:calendar>
+                            </div>
+
 
                             <strong><h:outputText value="#{msg['reformalaboralN']}" style="font-size: 14px; position: absolute; top: 118px; left: 50px" /></strong>
                             <p:inputText id="duplicarReformaLaboral" value="#{controlVigenciasReformasLaborales.duplicarVRL.reformalaboral.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 115px;">
@@ -258,7 +275,7 @@
                             <p:watermark for="duplicarReformaLaboral" value="#{msg['reeformalaboralN']}" />
 
                             <p:commandButton id="limpiarDuplicadoVRl" value="#{msg['limpiar']}" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;" actionListener="#{controlVigenciasReformasLaborales.limpiarduplicarVRL()}" update="duplicarVRL" process="@this"/>
-                            <p:commandButton id="agregarDuplicadoVRL" value="#{msg['agregar']}" style="font-size: 11px; position: absolute; left: 190px; top: 220px;"  process="@this" actionListener="#{controlVigenciasReformasLaborales.confirmarDuplicar()}" onclick="DuplicarRegistroVRL.hide();"  />
+                            <p:commandButton id="agregarDuplicadoVRL" value="#{msg['agregar']}" style="font-size: 11px; position: absolute; left: 190px; top: 220px;"  process="@this" actionListener="#{controlVigenciasReformasLaborales.confirmarDuplicar()}"   />
                             <p:commandButton id="cancelarDuplicadoVRL" value="#{msg['cancelar']}" style="font-size: 11px; position: absolute; left: 280px; top: 220px;" actionListener="#{controlVigenciasReformasLaborales.limpiarduplicarVRL()}" update="duplicarVRL" onclick="DuplicarRegistroVRL.hide();"  process="@this"/>
                         </p:panel>
                     </p:dialog>
