--- a/DesignerRHN/DesignerRHN-war/web/IbcAutoliquid.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/IbcAutoliquid.xhtml
@@ -25,7 +25,8 @@
                             <legend style="font-size: 12px; color: blue"><strong>#{msg['ibcs']}</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
-                            <p:dataTable id="datosIBCS" var="infoIBC" rowKey="#{infoIBC.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 830px"   
+                            <p:dataTable id="datosIBCS" var="infoIBC" rowKey="#{infoIBC.secuencia}" rowIndexVar="indice"
+                                         style="font-size: 10px; border: 1px;width: 830px"   
                                          value="#{controlIbcAutoliquid.listIbcsAutoliquidaciones}" scrollable="true" scrollHeight="262" scrollWidth="830"
                                          filteredValue="#{controlIbcAutoliquid.filtrarListIbcsAutoliquidaciones}" emptyMessage="#{msg['vacio']}"
                                          editable="true" editMode="cell" paginator="true" rows="9"  
@@ -87,7 +88,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooEstadoIBC" value="#{msg['estado']}"/>
+                                        <h:outputText style="width: 100%; height: 16px;  border: none; color: blue" id="fooEstadoIBC" value="#{msg['estado']}"/>
                                     </f:facet>
                                 </p:column>
 
@@ -105,7 +106,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooProcesoIBC" value="#{msg['proceso']}"/>
+                                        <h:outputText style="width: 100%; height: 16px; border: none; color: blue" id="fooProcesoIBC" value="#{msg['proceso']}"/>
                                     </f:facet>
                                 </p:column>
 
@@ -127,7 +128,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooValorIBC" value="#{msg['valor']}"/>
+                                        <h:outputText style="width: 100%; height: 16px; border: none; color: blue" id="fooValorIBC" value="#{msg['valor']}"/>
                                     </f:facet>
                                 </p:column>
 
