--- a/DesignerRHN/DesignerRHN-war/web/NReportePersonal.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NReportePersonal.xhtml
@@ -55,12 +55,12 @@
 
                                 <p:column id="tipoIR" headerText="#{msg['tipo']}" width="102" sortBy="#{info.tipo}" filterBy="#{info.tipo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding: 0px" >                                  
                                     <p:selectOneMenu value="#{info.tipo}"  style="width: 99%; font-weight: bold; "  panelStyle="width: 115px">  
-                                        <f:selectItem itemLabel="#{msg['acrobat']}" itemValue="Acrobat" />  
-                                        <f:selectItem itemLabel="#{msg['html']}" itemValue="HTML" />  
-                                        <f:selectItem itemLabel="#{msg['xml']}" itemValue="XML" />  
-                                        <f:selectItem itemLabel="#{msg['excel']}" itemValue="EXCEL" />  
-                                        <f:selectItem itemLabel="#{msg['hojaelectronica']}" itemValue="Hoja Electronic" />
-                                        <f:selectItem itemLabel="#{msg['rtf']}" itemValue="RTF" />
+                                        <f:selectItem itemLabel="#{msg['pdf']}" itemValue="Acrobat" />  
+                                        <f:selectItem itemLabel="#{msg['xhtml']}" itemValue="HTML" />  
+                                        <f:selectItem itemLabel="#{msg['xls']}" itemValue="XML" />  
+                                        <f:selectItem itemLabel="#{msg['xlsx']}" itemValue="EXCEL" />  
+                                        <f:selectItem itemLabel="#{msg['csv']}" itemValue="Hoja Electronic" />
+                                        <f:selectItem itemLabel="#{msg['docx']}" itemValue="RTF" />
                                     </p:selectOneMenu>
                                 </p:column>
 
